feat: migrate db for the new model

--- a/sqlc.yaml
+++ b/sqlc.yaml
@@ -2,7 +2,7 @@ version: "2"
 sql:
     - engine: sqlite
       queries: "./sqlc/queries.sql"
-      schema: "./sqlc/schema.sql"
+      schema: "./sqlc/migrations"
       gen:
         go:
           package: "monitor_db"
